--- a/style.css
+++ b/style.css
@@ -11,3 +11,26 @@
   }
 }
 
+
+/*-------sos button ---------*/
+#mySBtn {
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: red; /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 25px; /* Some padding */
+  border-radius: 50%; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
+}
+
+#mySBtn:hover {
+  background-color: #fff; /* Add a dark-grey background on hover */
+  color: red;
+  font-weight: 700;
+}
+/*-----end of sos button----*/
