--- a/mobileView.css
+++ b/mobileView.css
@@ -1,4 +1,8 @@
 @media only screen and (max-width: 768px) {
+	.meet-heading {
+		font-size: 45px;
+	}
+
 	.one-line-card {
 		flex-direction: column;
 	}
@@ -16,5 +20,9 @@
 
 	.main-img {
 		padding: 0;
+	}
+
+	.footer {
+		flex-direction: column;
 	}
 }
