--- a/output.css
+++ b/output.css
@@ -1237,6 +1237,48 @@ video {
 
 .rounded-full {
   border-radius: 9999px;
+  display: flex;
+  gap:10px;
+}
+
+.mission-1 {
+  display: flex;
+  color: #F8FAFC;
+  margin: 0.5rem;
+  width: 3.5rem;
+  font-size: 1rem;
+  font-weight: 600;
+
+}
+
+.mission-2 {
+  display: flex;
+  color: #F8FAFC;
+  margin: 0.7rem;
+  width: 3.5rem;
+  font-size: 1rem;
+  font-weight: 600;
+
+}
+
+.mission-L1 {
+  display: flex;
+  color: #333231CC;
+  margin: 0.8rem;
+  width: 3.5rem;
+  font-size: 1rem;
+  font-weight: 600;
+
+}
+
+.mission-L2 {
+  display: flex;
+  color: #333231CC;
+  margin: 0.8rem;
+  width: 3.5rem;
+  font-size: 1rem;
+  font-weight: 600;
+
 }
 
 .rounded {
