--- a/introSection.css
+++ b/introSection.css
@@ -171,3 +171,16 @@
   background-color: rgb(255, 231, 202);
   border: 6px antiquewhite solid;
 }
+
+::-webkit-scrollbar{
+  width: 10px;
+}
+::-webkit-scrollbar-track{
+  background-color: antiquewhite;
+}
+::-webkit-scrollbar-thumb{
+  background-clip: content-box;
+  border: 2px transparent solid;
+  background-color: brown;
+  border-radius: 13px;
+}
