Added GitHub logo, fixed margin and padding around affected areas.

--- a/style.css
+++ b/style.css
@@ -90,3 +90,12 @@
     margin: auto;
   }
 }
+
+.contributors {
+    margin-top:20px;
+    margin-bottom:20px;
+}
+
+.contributors-container{
+    padding-top:20px;
+}
