--- a/mobileView.css
+++ b/mobileView.css
@@ -6,24 +6,26 @@
   .one-line-card {
     flex-direction: column;
   }
-
-  .main-card {
-    width: 96%;
-    max-width: 400px;
-    margin: 10px auto;
-    flex-direction: column;
-  }
-
   .card-height {
     height: fit-content;
   }
+  .footer {
+    flex-direction: column;
+  }
+}
 
+@media only screen and (max-width:1225px){
   .main-img {
     padding: 0;
     margin-top: 1rem;
   }
-
-  .footer {
+  .card-height {
+    height: fit-content;
+  }
+  .main-card {
+    width: 96%;
+    max-width: 400px;
+    margin: 10px auto;
     flex-direction: column;
   }
 }
