fix: footer for smaller screensizes

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     padding: theme("spacing.6");
     box-shadow: theme("boxShadow.xl");
   }
- 
+
   .contributors-container {
     display: flex;
     flex-direction: column;
@@ -161,6 +161,7 @@
   justify-content: space-evenly;
   align-items: center;
   width: 90vw;
+  flex-wrap: wrap;
 }
 
 .fix {
