--- a/output.css
+++ b/output.css
@@ -34,6 +34,7 @@
 
 html {
   line-height: 1.5;
+  scroll-behavior: smooth;    /* gives a smooth scroll effect */
   /* 1 */
   -webkit-text-size-adjust: 100%;
   /* 2 */
