--- a/navbar.css
+++ b/navbar.css
@@ -104,14 +104,18 @@
 
 /* make the header sticky on scroll */
 .header {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 100;
+	position: fixed;
+	top: 0;
+	transition: 0.25s;
+	width: 100%;
+	z-index: 100;
 }
 
 .add_border{
   border-bottom: 2px solid #ae642c;
   /* give a bottom shadow */
   box-shadow:  0px 10px 10px 0px rgba(0, 0, 0, 0.4);
+}
+.nav-hidden{
+	top: -100px;
 }
