--- a/introSection.css
+++ b/introSection.css
@@ -29,12 +29,14 @@
 
 .main-body-section-div h1 {
   font-size: 64px;
-  padding-left: 2%;
+  padding-left: 18.8%;
+  padding-top: 16.6%;
   color: azure;
   font-weight: 700;
 }
 
 .main-body-section-div div {
+  padding-left: 14.3%;
   font-size: 32px;
   color: azure;
   font-weight: 400;
