--- a/style.css
+++ b/style.css
@@ -117,10 +117,47 @@
 
 /*-----end of sos button----*/
 
+.bg-amber-900 .btn {
+  color: white;
+  border: 1px solid white;
+}
+
+/**
+fixes contact us button
+**/
+.bg-header-orange-light {
+  color: #000;
+}
+/**
+Fixes contant form color when theme changes
+**/
+.bg-amber-900 .contact-form-container .text-black, .bg-amber-900 .contact-form-container .text-gray-700 {
+  color: #fff;
+}
+
+
+.bg-amber-900 .btn {
+  color: white;
+  border: 1px solid white;
+}
+
+/**
+fixes contact us button
+**/
+.bg-header-orange-light {
+  color: #000;
+}
+/**
+Fixes contant form color when theme changes
+**/
+.bg-amber-900 .contact-form-container .text-black, .bg-amber-900 .contact-form-container .text-gray-700 {
+  color: #fff;
+}
+
 .btn {
   margin-top: 18px;
-  border: 2px solid #fff;
-  color: #fff;
+  border: 2px solid #000;
+  color: #000;
   cursor: pointer;
   background-color: #ffac46;
   box-shadow: inset 0 0 0 0 #ffac46;
