Add transition styling to the back to top button - Add transition styling to the existing Back to Top button - Improve the button's appearance with the transition effect - Enhance UX by adding animation when the button appears and disappears - Use CSS opacity transition to achieve the animation effect

--- a/style.css
+++ b/style.css
@@ -243,6 +243,9 @@ Fixes contant form color when theme changes
   padding: 18px !important;
   border-radius: 20%;
   font-size: 12px;
+  opacity: 0;
+  transition: all 0.5s;
+  transform: translateY(500px);
  }
 
 #bttbutton:hover {
@@ -250,6 +253,8 @@ Fixes contant form color when theme changes
   color: #ffac46;
   font-weight: 700 !important;
 }
+
+
 
 
 /* End of Back to top button */
