--- a/introSection.css
+++ b/introSection.css
@@ -12,12 +12,11 @@
   padding-bottom: 30px;
 }
 
+/* CORRECT THE HERO IMAGE: I also changed the height to a 850px to give clearer view of the cute puppies */
 .main-body-section-div {
-  background-image: url("./Assets/Images/main-heading-body-bg.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  min-height: 650px;
+  background: url("./Assets/Images/main-heading-body-bg.jpg") no-repeat center
+    center/cover;
+  min-height: 850px;
   opacity: 0.9;
   padding-top: 80px;
 }
@@ -27,16 +26,29 @@
   padding-left: 5%;
 }
 
+/* CORRECT THE HERO IMAGE: The list element style was causing the whitespace. Removing it succesfully fixes the problem */
+.main-body-section > li {
+  list-style: none;
+}
+
+/*CORRECT THE HERO IMAGE: Added display flex property to move image element to the top left  */
+.heading-main-body {
+  display: flex;
+  justify-content: start;
+  width: 100%;
+}
+
 .main-body-section-div h1 {
   font-size: 64px;
-  padding-left: 18.8%;
+  /* padding-left: 18.8%; */
   padding-top: 16.6%;
   color: azure;
   font-weight: 700;
 }
 
+/* CORRECT THE HERO IMAGE: Removed padding so .main-body-heading-text flex all the way to the flex start */
 .main-body-section-div div {
-  padding-left: 14.3%;
+  /* padding-removed */
   font-size: 32px;
   color: azure;
   font-weight: 400;
