--- a/style.css
+++ b/style.css
@@ -258,3 +258,54 @@ Fixes contant form color when theme changes
 
 
 /* End of Back to top button */
+
+/* big size image */
+
+
+.big {
+  top: 50%;
+  left: 40%;
+  width: 700px;
+  height: 600px;
+  margin-top: -15em;
+  margin-left: -16em;
+  position: fixed;
+  display: none;
+  z-index: 30;
+} 
+
+
+.black {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 250vw;
+  background: black;
+  opacity: 0.5;
+  z-index: 10;
+
+} 
+
+#iccon-close {
+  top: 50%;
+  left: 40%;
+  margin-top: -17em;
+  margin-left: 27em;
+  position: fixed;
+  z-index: 99;
+}
+
+#iccon-close img {
+  width: 50px;
+  height: 50px;
+  background-color: #ffac46;
+}
+
+#iccon-close img:hover {
+  cursor: pointer;
+}
+
+
+
+/* end big size image */
