--- a/style.css
+++ b/style.css
@@ -117,139 +117,5 @@
 
 /*-----end of sos button----*/
 
-.bg-amber-900 .btn {
-  color: white;
-  border: 1px solid white;
-}
+.bg-
 
-/**
-fixes contact us button
-**/
-.bg-header-orange-light {
-  color: #000;
-}
-/**
-Fixes contant form color when theme changes
-**/
-.bg-amber-900 .contact-form-container .text-black,
-.bg-amber-900 .contact-form-container .text-gray-700 {
-  color: #fff;
-}
-
-.bg-amber-900 .btn {
-  color: white;
-  border: 1px solid white;
-}
-
-/**
-fixes contact us button
-**/
-.bg-header-orange-light {
-  color: #000;
-}
-/**
-Fixes contant form color when theme changes
-**/
-.bg-amber-900 .contact-form-container .text-black,
-.bg-amber-900 .contact-form-container .text-gray-700 {
-  /* color: #fff; */
-  color: #000;
-}
-
-.btn {
-  margin-top: 18px;
-  border: 2px solid #000;
-  color: #000;
-  cursor: pointer;
-  background-color: #ffac46;
-  box-shadow: inset 0 0 0 0 #ffac46;
-  border-radius: 8px;
-  -webkit-border-radius: 8px;
-  -moz-border-radius: 8px;
-  -ms-border-radius: 8px;
-  -o-border-radius: 8px;
-  transition: ease-out 0.4s;
-  -webkit-transition: ease-out 0.4s;
-  -moz-transition: ease-out 0.4s;
-  -ms-transition: ease-out 0.4s;
-  -o-transition: ease-out 0.4s;
-}
-
-.btn {
-  display: block;
-  text-decoration: none;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 500;
-  height: 3rem;
-  width: 12rem;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.btn:hover {
-  border: 2px solid #fff;
-  box-shadow: inset 200px 0 0 0 #ffac46;
-  /* background-color:  #ffac46; */
-  color: #fff;
-}
-
-.fix {
-  margin-left: -260px;
-}
-
-/* underline animation for anchor tag in about us section */
-
-.hover-underline-animation {
-  display: inline-block;
-  position: relative;
-  color: #9ca3af;
-}
-
-.hover-underline-animation:after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  transform: scaleX(0);
-  height: 2px;
-  bottom: 0;
-  left: 0;
-  background-color: #9ca3af;
-  transform-origin: bottom right;
-  transition: transform 0.25s ease-out;
-}
-
-.hover-underline-animation:hover:after {
-  transform: scaleX(1);
-  transform-origin: bottom left;
-}
-
-/* anchor animation ends  */
-
-/* Back to top button */
-#bttbutton {
-  position: fixed;
-  bottom: 120px;
-  right: 45px;
-  z-index: 99;
-  border: none;
-  outline: none;
-  background-color: #ae642c;
-  color: white !important;
-  cursor: pointer;
-  padding: 18px !important;
-  border-radius: 20%;
-  font-size: 12px;
-  opacity: 0;
-  transition: all 0.5s;
-  transform: translateY(500px);
-}
-
-#bttbutton:hover {
-  background-color: #ffac46;
-  color: #ffac46;
-  font-weight: 700 !important;
-}
-
-/* End of Back to top button */
