Added hover effect for the footer social media icons, to the improve the interface

--- a/navbar.css
+++ b/navbar.css
@@ -1,3 +1,8 @@
+.navbar{
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
 .bg-header-offwhite {
   --tw-bg-opacity: 0.5;
   background-color: rgb(237 224 211);
