Added hover effect to social media icons

--- a/style.css
+++ b/style.css
@@ -117,5 +117,37 @@
 
 /*-----end of sos button----*/
 
-.bg-
+
+/*---- Social Media Icons ---*/
+.facebookIcon:hover{
+  background-color: #4267B2 ;
+  font-weight: 700 ;
+  border-radius: 100%;
+  padding-left: 5px;
+  padding-top: 5px;
+}
+
+.instagramIcon:hover{
+  /* gradient effect */
+  background: #f09433; 
+  background: -moz-linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%); 
+  background: -webkit-linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+  background: linear-gradient(45deg, #f09433 0%,#e6683c 25%,#dc2743 50%,#cc2366 75%,#bc1888 100%); 
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f09433', endColorstr='#bc1888',GradientType=1 ) ;
+  font-weight: 700 ;
+  border-radius: 100%;
+  padding-left: 5px;
+  padding-top: 5px;
+}
+
+.githubIcon:hover{
+  background-color: #353e32 ;
+  font-weight: 700 ;
+  border-radius: 100%;
+  padding-left: 5px;
+  padding-top: 5px;
+}
+
+/* Social Media Icons */
+
 
