--- a/style.css
+++ b/style.css
@@ -106,6 +106,20 @@
   }
 }
 
+button.btn{
+  border-width: 2px;
+  border-color: rgba(0,0,0,0);
+  background-color: #fdc674;
+  padding: 5px 15px;
+  margin:5px 0;
+  font-size: 1.2rem;
+  border-radius: 30px;
+}
+
+button.btn:hover{
+  background-color: #bd9456;
+}
+
 .contributors {
   margin-top: 20px;
   margin-bottom: 20px;
