--- a/navbar.css
+++ b/navbar.css
@@ -103,7 +103,7 @@
 }
 
 /* make the header sticky on scroll */
-.header {
+#header {
 	position: fixed;
 	top: 0;
 	transition: 0.25s;
@@ -119,3 +119,4 @@
 .nav-hidden{
 	top: -100px;
 }
+
