--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@
 
   /*-----end of sos button----*/
   #icons:hover path {
-    fill: greyd;
+    fill: grey;
     transition-property: fill;
     transition-duration: 300ms;
   }
