--- a/introSection.css
+++ b/introSection.css
@@ -13,12 +13,15 @@
 }
 
 /* CORRECT THE HERO IMAGE: I also changed the height to a 850px to give clearer view of the cute puppies */
-.main-body-section-div {
-  background: url("./Assets/Images/main-heading-body-bg.jpg") no-repeat center
-    center/cover;
+.main-body-section-div{
+  /* background: url("./Assets/Images/main-heading-body-bg.jpg") no-repeat center
+    center/cover; */
+  background-repeat: no-repeat!important;
+  background-size: cover!important;
   min-height: 850px;
   opacity: 0.9;
   padding-top: 80px;
+  transition: background 0.6s ease-in-out;
 }
 
 .main-body-heading-text {
