Added fade-in for contact form

--- a/style.css
+++ b/style.css
@@ -145,5 +145,49 @@
   color: #fff;
 }
 
+@keyframes fade-in-right {
+  0% {
+    opacity: 0;
+    transform: translateX(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+.anima-fade-in-right {
+  animation: fade-in-right 0.5s ease-in-out;
+}
+
+@keyframes scroll-fade-in {
+  from {
+    opacity: 0;
+    transform: translateX(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes scroll {
+  from {
+    transform: translateY(0px);
+  }
+  to {
+    transform: translateY(-100px);
+  }
+}
+
+.scroll-fade-in {
+  animation: scroll-fade-in 0.5s ease-in-out both;
+}
+
+.scroll {
+  animation: scroll 0.5s ease-in-out both;
+}
+
+
 /*-----end of sos button----*/
 
