Changing NavBar height

--- a/navbar.css
+++ b/navbar.css
@@ -120,3 +120,18 @@
 	top: -100px;
 }
 
+#navbar{
+  height: fit-content;
+}
+
+.goog-logo-link,.goog-te-gadget span,.goog-te-banner-frame,#goog-gt-tt, .goog-te-balloon-frame,div#goog-gt-{
+  display: none!important;
+}
+
+.goog-te-gadget {
+  font-size:0px;
+}
+
+.skiptranslate goog-te-gadget #text{
+  display: none!important;
+}
