--- a/introSection.css
+++ b/introSection.css
@@ -10,9 +10,7 @@
   padding-top: 30px;
   padding-bottom: 30px;
 }
-.m-heading {
-  font-size: 70px;
-				background-color: rgb(123, 53, 15);
+.m-heading {				background-color: rgb(123, 53, 15);
 				text-align: center;
         margin-left: 20%;
         margin-right: 20%;
